--- a/src/server/client/lista_exames.html
+++ b/src/server/client/lista_exames.html
@@ -13,7 +13,6 @@
         <main>
           <div class="table_header">
             <h3>Lista de Exames</h3>
-            <!-- <button>Adicionar amostra</button> -->
           </div>
           <table>
             <tr>
@@ -24,6 +23,7 @@
               <th>Id Amostra</th>
               <th>Cpf Analista</th>
               <th>Cpf Supervisor</th>
+              <th></th>
             </tr>
             <tr>
               <td>#2125342</td>
@@ -33,8 +33,13 @@
               <td>-</td>
               <td>-</td>
               <td>-</td>
-            </tr>
-            <tr>
+              <td>
+                <img src="check.png" width="14" height="14" />
+              </td>
+              <td>
+                <img src="refresh.png" width="14" height="14" />
+              </td>
+            </tr> <tr>
               <td>#2125342</td>
               <td>AGUARDANDO COLETA</td>
               <td>27/01/1992</td>
@@ -42,8 +47,17 @@
               <td>-</td>
               <td>-</td>
               <td>-</td>
-            </tr>
-            <tr>
+              <td>
+                <div class="imageBox">
+                  <img src="check.png" width="14" height="14" />
+                </div>
+              </td>
+              <td>
+                <div class="imageBox">
+                  <img src="refresh.png" width="14" height="14" />
+                </div>
+              </td>
+            </tr> <tr>
               <td>#2125342</td>
               <td>AGUARDANDO COLETA</td>
               <td>27/01/1992</td>
@@ -51,8 +65,13 @@
               <td>-</td>
               <td>-</td>
               <td>-</td>
-            </tr>
-            <tr>
+              <td>
+                <img src="check.png" width="14" height="14" />
+              </td>
+              <td>
+                <img src="refresh.png" width="14" height="14" />
+              </td>
+            </tr> <tr>
               <td>#2125342</td>
               <td>AGUARDANDO COLETA</td>
               <td>27/01/1992</td>
@@ -60,6 +79,14 @@
               <td>-</td>
               <td>-</td>
               <td>-</td>
+              <td>
+                <img src="check.png" width="14" height="14" />
+              </td>
+              <td>
+                <img src="refresh.png" width="14" height="14" />
+              </td>
+            </tr>
+          
             </tr>
           </table>
         </main>
